tests/invalid/duplicate_export_module_symbol.wio
@ModuleLoad
fn Load() -> i32 {
    return 0;
}

@Export
@CppName(WioModuleLoad)
fn ShadowLoad() -> i32 {
    return 0;
}
